[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/PressStart2P-vaV7_18pt.tres" type="DynamicFont" id=1]
[ext_resource path="res://dungeon_fight/Buttons/answer_panel_normal.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/themes/dungeon_fight_answer_button/dungeon_fight_answer_button_hover.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/themes/dungeon_fight_answer_button/dungeon_fight_answer_button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/themes/dungeon_fight_answer_button/dungeon_fight_answer_button_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://dungeon_fight/Buttons/ScrollContainer.gd" type="Script" id=6]
[ext_resource path="res://dungeon_fight/Buttons/answer_panel_hovered.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/themes/answer_tile.tres" type="StyleBox" id=8]
[ext_resource path="res://dungeon_fight/Buttons/AnswerButton.gd" type="Script" id=9]

[node name="AnswerPanelContainer" type="PanelContainer"]
margin_left = 25.0
margin_right = 425.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
size_flags_vertical = 0
custom_styles/panel = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 396.0
margin_bottom = 196.0
custom_constants/margin_right = 10

[node name="Button" type="Button" parent="MarginContainer2"]
margin_right = 382.0
margin_bottom = 192.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 396.0
margin_bottom = 196.0
custom_constants/margin_right = 3
custom_constants/margin_top = 4
custom_constants/margin_left = 3
custom_constants/margin_bottom = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 4.0
margin_right = 389.0
margin_bottom = 190.0
rect_min_size = Vector2( 300, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
normalStyleBox = ExtResource( 2 )
hoveredStyleBox = ExtResource( 7 )

[node name="answerLabel" type="Label" parent="MarginContainer/ScrollContainer"]
margin_right = 374.0
margin_bottom = 543.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.654902, 0.678431, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.117647, 0.133333, 0.152941, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 3
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\""
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_AnswerPanelContainer_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_AnswerPanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_AnswerPanelContainer_mouse_exited"]
[connection signal="answer_selected_scroll" from="MarginContainer/ScrollContainer" to="." method="_on_ScrollContainer_answer_selected_scroll"]
[connection signal="gui_input" from="MarginContainer/ScrollContainer" to="MarginContainer/ScrollContainer" method="_on_ScrollContainer_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/ScrollContainer" to="MarginContainer/ScrollContainer" method="_on_ScrollContainer_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/ScrollContainer" to="MarginContainer/ScrollContainer" method="_on_ScrollContainer_mouse_exited"]
